<resources>

    <!-- - - - - - - - - - - - - - - -
      - Used throughout MovieCulture -
      - - - - - - - - - - - - - - - -->

    <!-- Application name -->
    <string name="app_name" translatable="false">Movie Culture</string>

    <!-- Movie detail string also used as the label of Movie Details activity -->
    <string name="title_activity_movie_detail">Details</string>

    <!-- Settings menu string also used as the label of Settings activity -->
    <string name="settings_menu_option">Settings</string>

    <!-- About menu string also used as the label of About activity -->
    <string name="about_menu_option">About</string>

    <!-- String containing the content authority. -->
    <string name="content_authority">com.example.android.movieculture</string>


    <!-- - - - - - - - - - - - - - - - -
      - Used by MovieCulture Discovery -
      - - - - - - - - - - - - - - - - -->

    <!-- Content description for the posters ImageView -->
    <string name="discovery_activity_poster_description">Movie Poster</string>


    <!-- - - - - - - - - - - - - - - - - -
      - Used by MovieCulture Preferences -
      - - - - - - - - - - - - - - - - - -->

    <!-- Settings menu label for the sort option -->
    <string name="sort_by_label">Sort by</string>

    <!-- Settings menu label for the sort by popularity option -->
    <string name="sort_by_popularity_label">Popularity</string>

    <!-- Settings menu value for the sort by popularity option -->
    <string name="sort_by_popularity" translatable="false">popular</string>

    <!-- Settings menu label for the sort by user rating option -->
    <string name="sort_by_user_rating_label">User rating</string>

    <!-- Settings menu value for the sort by user rating option -->
    <string name="sort_by_user_rating" translatable="false">top_rated</string>

    <!-- Settings menu label for the sort by favorites option -->
    <string name="sort_by_favorites_label">Favorites</string>

    <!-- Settings menu value for the sort by favorites option -->
    <string name="sort_by_favorites" translatable="false">favorites</string>

    <!-- Settings menu key for the sort option -->
    <string name="sort_key" translatable="false">sort</string>


    <!-- - - - - - - - - - - - - - - - - - -
      - Used by MovieCulture About Section -
      - - - - - - - - - - - - - - - - - - -->

    <!-- About section content description for the TMDb logo -->
    <string name="tmdb_logo" translatable="false">TMDB Logo</string>

    <!-- About section disclaimer for using the TMDb -->
    <string name="tmdb_disclaimer">
        This product uses the TMDb API but is not endorsed or certified by TMDb.
    </string>

    <!-- About section description of the app -->
    <string name="app_description">
        This app was made by Alin Simon as a project for the Android Developer Nanodegree by Udacity.
    </string>


    <!-- - - - - - - - - - - - - - - - -
      - Used by movie detail activity -
      - - - - - - - - - - - - - - - - -->

    <!-- Content description for the movie poster in detail activity -->
    <string name="detail_activity_movie_poster_description">Movie poster</string>

    <!-- Content description for the play button in detail activity -->
    <string name="detail_activity_play_button_description">Play button</string>

    <!-- Release date string in detail activity -->
    <string name="release_date_string">Release date:</string>

    <!-- Average rating string in detail activity -->
    <string name="average_rating_string">Average rating:</string>

    <!-- Plot synopsis string in detail activity -->
    <string name="plot_synopsis_string">Plot synopsis:</string>

    <!-- Trailers string in detail activity -->
    <string name="trailers_string">Trailers:</string>

    <!-- User reviews string in detail activity -->
    <string name="reviews_string">User reviews:</string>

    <!-- Toast message string confirming that the movie was added to the database -->
    <string name="toast_movie_added_string">Added to favorites</string>

    <!-- Toast message string confirming that the movie was removed from the database -->
    <string name="toast_movie_removed_string">Removed from favorites</string>


    <!-- - - - - - - - - - - - - - - - - - - - - -
      - Dummy data for the movie detail activity -
      - - - - - - - - - - - - - - - - - - - - - -->

    <!-- Test string for the movie title -->
    <string name="movie_title_test_string" translatable="false">Interstellar</string>

    <!-- Test string for the release date -->
    <string name="release_date_test_string" translatable="false">November 7, 2014</string>

    <!-- Test string for the average rating -->
    <string name="average_rating_test_string" translatable="false">8.1/10</string>

    <!-- Test string for the plot synopsis -->
    <string name="plot_synopsis_test_string" translatable="false">
        Interstellar chronicles the adventures of a group of explorers who make use of a newly discovered wormhole to surpass the limitations on human space travel and conquer the vast distances involved in an interstellar voyage.
    </string>

    <!-- Test string for the trailer title -->
    <string name="trailer_test_string" translatable="false">Official Trailer</string>

    <!-- Test string for the reviewer name -->
    <string name="reviewer_name_test_string" translatable="false">Screen-Space</string>

    <!-- Test string for the review -->
    <string name="review_test_string" translatable="false">It is a bold undertaking, to readjust what is expected of the MCU/Avengers formula, and there are moments when the sheer scale and momentum match the narrative ambition...</string>

</resources>
